--- a/style.css
+++ b/style.css
@@ -4,7 +4,35 @@ background-color:rgb(253, 251, 251);
 
 #cabecalho {
     top: 0px;
+    width: 100%;
     position: fixed;
+    background-color: gold;
+    text-align: center;
+    }
+
+#minha_foto {
+    border-radius: 20px;
+    margin-top: 100px;
+    margin-left: 37%;
 }
 
+#licoes_aprendidas {
+    display: inline-block;
+        
+}
 
+#licoes {
+    display: inline-block;
+    
+}
+
+.aprender {
+    margin-left: 29%;
+    font-style: normal;
+    font-family: sans-serif;
+}
+
+.text {
+    font-style: normal;
+    font-family: sans-serif;
+}
