--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 * {
-  margin: 0%;
-
-}
+  margin: 0%;}
 
 body {
   background-color: rgb(253, 251, 251);
+  font-family: 'Roboto', sans-serif;
 }
 
 h1 {
+  line-height: 10px;
+  font-size: large
+  border 10px;
+  padding: 0%;
+  margin: 0%;
+  background-color: red;
   text-align: center;
   color:rgb(190, 104, 240)
+   
 }
 
 #cabecalho{
