--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     background-color: rgb(253, 251, 251);
+    line-height: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(27, 27, 27);
 }
 
 #cabecalho {
@@ -8,8 +11,14 @@ body {
     background-color: rgb(36, 147, 107)
 }
 
+h1 {
+    font-size: 40px;
+
+
+}
+
 ul, ol{
-    display: inline-block
+    display: inline-block;
 }
 
 #minha_foto{
