--- a/style.css
+++ b/style.css
@@ -1,43 +1,112 @@
 body {
-    margin-top: 30px;
-    background-color: rgb(253, 251, 251);
-    border: 1px, solid, black;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background-color: rgb(253, 251, 251);
+  border: 1px, solid, black;
 }
+
 header {
-    top:0;
+  top: 0;
 }
+
 #cabecalho {
-    top: 0;
-    position: fixed;
-    background-color: grey;
-    border: 1px, solid, black;
+  top: 0;
+  position: fixed;
+  background-color: grey;
+  width: 100%;
+  padding: 0px, 0px, 10px, 0px;
 }
+
+#titulo {
+  margin-top: 10px;
+  text-align: center;
+}
+
 #minha_foto {
   width: 300px;
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 5px;
 }
+
 main {
-  display: inline-block;
+  margin-top: 50px;
 }
+
 #aprendizado {
-  display: inline-block;
+  float: left;
+  margin-top: 50px;
   background-color: grey;
+  border-radius: 5px;
   border: 1px, solid, black;
-  width: 600px;
+  width: 300px;
+  height: 300px;
+  margin-left: 10px;
+  
 }
+
 #licoes_aprendidas {
-  display: inline-block;
+  float: right;
+  margin-top: 50px;
+  background-color: grey;
+  border-radius: 5px;
   border: 1px, solid, black;
+  width: 300px;
+  height: 300px;
+  margin-right: 20px;
 }
+
 #licoes_a_aprender {
-    display: inline-block;
+  float: right;
+  margin-top: 50px;
+  background-color: grey;
+  border-radius: 5px;
+  border: 1px, solid, black;
+  width: 300px;
+  height: 300px;
+  margin-right: 10px;
 }
+
 aside {
-    display: inline-block;
-    background-color: grey;
-    border: 1px, solid, black;
-    width: 300px;
-    height: 350px;
+  float: left;
+  display: inline-block;
+  margin-top: 50px;
+  width: 300px;
+  
+}
+
+#breve_licao {
+  display: inline-block;
+  background-color: rgb(182, 182, 182);
+  border-radius: 5px;
+  margin: 10px;
+  border: 1px solid black;
+}
+
+.tabela {
+  float: right;
+  margin: 100px;
+}
+
+table, th, td {
+  border: 1px solid black;
+  text-align: center;
+  width: 280px;
+  margin-left: 320px;
+  margin-top: 600px;
+}
+
+p {
+  margin: 20px;
+  text-align: justify;
+}
+
+h1, h2, h3 {
+  margin: 10px;;
+}
+
+footer {
+  margin-top: 300px;
+  display: block;
 }
