--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ textarea {
 
 /* TAG */
 
+body {
+    background-color: rgb(253, 251, 251);
+}
+
 h1 {}
 
 h2 {}
@@ -51,17 +55,33 @@ h3 {}
 
 /* ID */
 
-#cabecalho {}
+#cabecalho {
+    background-color: #228B22;
+    position: fixed;
+    width: 100%;
+}
 
-#menubar {}
+#menu_titulo {
+    font-weight: 100;
+    margin: 1rem;
+    text-align: center;
+    text-shadow: 2px 2px #006400;
+}
 
-#titulo {}
+#titulo {
+    font-size: 1.5rem;
+}
 
 #perfil {}
 
 #perfil__box_img {}
 
-#minha_foto {}
+#minha_foto {
+    height: 200px;
+    width: 225px;
+    border: 1px;
+    border-radius: 100%;
+}
 
 #meu_nome {}
 
