--- a/style.css
+++ b/style.css
@@ -6,32 +6,30 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+
 h1 {
+  color: aqua;
   line-height: 10px;
   font-size: large
   border 10px;
   padding: 0%;
   margin: 0%;
   background-color: red;
-  text-align: center;
-  color:rgb(190, 104, 240)
-   
+  text-align : center; 
 }
 
-#cabecalho{
+#cabecalho {
   display: inline-block;
   top: 0%;
-  position:fixed
-  
+  position : fixed
 }
 
 #licoes_aprendidas {
-  color: black;
+  color : black;
    
 }
 #minha_foto {
 width: 100px;
-border-radius: 70%;
-display: inline-block;
-  
+border-radius : 70%;
+display: inline-block
 }
