--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ div {
   width: 100%;
   text-align: center;
   padding: 20px;
-  font-weight: bold;
+  font-weight:900;
   list-style: none;
 }
 
@@ -82,7 +82,7 @@ footer {
   height: 100px;
 }
 
-h2, h4 {
+h2,h4 {
   padding: 30px;
 }
 
