--- a/style.css
+++ b/style.css
@@ -5,8 +5,14 @@ body { background-color: rgb(253, 251, 251);
 
 #cabecalho { top: 0;
     background-color: aquamarine;
-    position: fixed;}
+    position: fixed;
+    padding-left: 540px;
+    padding-right: 540px;}
 
 #minha_foto { margin-top: 110px;}
 
 #indice { margin-top: 200px;}
+
+#tabela { text-align:left;}
+
+.lado-direito, .lado-esquerdo { display: inline-block;margin: 10px;padding: 5px; border: 1px solid rgb(77, 168, 145);}
