--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 body {
   background-color: rgb(253, 251, 251);
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 
@@ -11,25 +11,27 @@ h1 {
   color: aqua;
   line-height: 10px;
   font-size: large
-  border 10px;
+      border 10px;
   padding: 0%;
   margin: 0%;
   background-color: red;
-  text-align : center; 
+  text-align : center;
 }
 
 #cabecalho {
   display: inline-block;
   top: 0%;
   position : fixed
+  
 }
 
 #licoes_aprendidas {
   color : black;
-   
+  
 }
+
 #minha_foto {
-width: 100px;
-border-radius : 70%;
-display: inline-block
+  width: 100px;
+  border-radius : 70%;
+  display: inline-block;
 }
