--- a/style.css
+++ b/style.css
@@ -1,16 +1,63 @@
 body {
     background-color: rgb(253, 251, 251);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 45px;
+    width: fit-content;
+    background-color: rgb(238, 212, 188);
+    padding: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
+    color: rgb(44, 34, 19);
+    margin-right: auto;
+    margin-left: auto;
+}
+
+h2 {
+    font-size: 20px;
+    text-align: center;
+}
+
+footer {
+    clear: both;
+    text-align: right;
+}
+
+
+article {
+    text-align: center;
+    padding: 20px;  
+    width: fit-content;
+    background-color:rgb(238, 212, 188);
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
+}
+
+section {
+    text-align: center;
+    padding: 50px;
+    background-color:rgb(238, 212, 188);
+    display: inline-block;
 }
 
 #minha_foto {
     border-radius: 50%;
-    padding: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
 }
 
 .lista {
     background-color: rgb(238, 212, 188);
     padding: 5px;
-    border-radius: 10px;
-    display: inline-block;
-    position: absolute;
+    color: rgb(44, 34, 19);
+    display: inline-block;  
+    width: 300px;
+    font-size: 120%;
 }
