--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ div {
   width: 100%;
   text-align: center;
   padding: 20px;
-  font-weight:900;
+  font-weight: 900;
   list-style: none;
 }
 
@@ -82,7 +82,11 @@ footer {
   height: 100px;
 }
 
-h2,h4 {
+h2 {
+  padding: 30px;
+}
+
+h3 {
   padding: 30px;
 }
 
