requisitos bonus concluidos

--- a/style.css
+++ b/style.css
@@ -1,10 +1,78 @@
 header {
+  font-family: monospace;
   position: fixed;
   top: 0;
+  right: 0;
+  left: 0;
+  scrollbar-width: 0;
+  border: solid 2px rgb(0, 0, 0);
+  background-color: rgb(0, 255, 128);
+
+
+}
+
+#titulo{
+  text-align: center;
+}
+h2{
+  background-color: rgb(0, 255, 128);
+  font-size: 30px;
+  margin-top: 40px;
+  border: solid 2px rgb(0, 0, 0);
+}
+
+.picture {
+  background-color: rgb(0, 0, 0);
+  padding: 10px;
+  border-radius: 100%;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  height: 300px;
+  width: 300px;
+
+}
+.github{
+  padding: 20px;
+  background-color: rgb(7, 0, 0);
+  border-radius: 20px;
+  color: white
+}
+.lado-esquerdo {
+  display: inline-block;
+}
+
+.lado-direito {
+  display: inline-block;
 
 }
 
 body {
   background-color: rgb(253, 251, 251);
 
+}
+.principal{
+  margin-top: 40px;
+  width: 30%;
+  border: solid 2px rgb(0, 0, 0);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.secundario {
+  border: solid 2px rgb(0, 0, 0);
+  width:30%;
+  margin-top: 50px
+  
+}
+footer {
+  margin-top: 90px;
+  font-size: 20px;
+
+}
+ul,ol {
+  line-height: 30px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+table {
+  width: 30%;
+  
 }
