--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 body {
   background-color: rgb(253, 251, 251);
+  font-family: Roboto, sans-serif;
   margin: 0;
+  font-weight: 300;
+  font-size: 1.15em;
 }
+
+h1 , h2 , h3 , th {
+  font-weight: 400;
+}
+
 
 #cabecalho {
   position: fixed;
@@ -9,6 +17,18 @@ body {
   width: 100%;
   height: 80px;
   background-color: white;
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
+  text-align: center;
+}
+
+#titulo {
+  font-weight: 300;
+  font-size: 32px;
+}
+
+.trybe-green {
+  color: rgb(15, 163, 107);
+  font-weight: 400;
 }
 
 main {
@@ -22,4 +42,12 @@ main {
 td {
   border: 1px solid rgb(51, 51, 51);
   padding: 5px;
+}
+
+p {
+  line-height: 1.5em;
+}
+
+li {
+  margin: 5px 0;
 }
