--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
 }
 
 /* minhas alterações */
+
+h1 {
+    color: darkmagenta;
+}
+
 #minha_foto {
     margin-top: 50px;
     height: 150px;
@@ -24,9 +29,22 @@ body {
 
 .lado-esquerdo{
     float: left;
-    border: solid;
+    background-color: rgb(49, 158, 177);
 }
 .lado-direito {
-    margin: 0 700px 250px 350px;
-    border: solid;
+    margin: 0 700px 0 350px;
+    padding-bottom: 226px;
+    background-color: rgb(50, 170, 150);
 }
+
+.lado-direito p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+#rodape {
+    border:solid;
+    margin-right: 700px;
+}
+
