--- a/style.css
+++ b/style.css
@@ -7,15 +7,24 @@ body { background-color: rgb(253, 251, 251);
     left: 0;
     right: 0;
     background-color:pink;
+    margin-right: 900px;
+    border-color: rgb(255, 255, 255);
+    
  }
 
  #titulo { 
 font-family: monospace;
+font-size: 30px;
+color: rgb(71, 71, 71);
+line-height: 1.4;
+
  }
 
  #minha_foto {
      top: 0;
- }   
+     padding: 10px 10px 10px 10px;
+     
+     
 
  #licoes_aprendidas {
      font-family: monospace;
