--- a/style.css
+++ b/style.css
@@ -1,33 +1,47 @@
 .body {
-background-color:rgb(253, 251, 251);
+background-color: rgb(253, 251, 251);
 }
 
 #cabecalho {
-    top: 0px;
+    top: 0;
     width: 100%;
+    height: 17%;
     position: fixed;
     background-color: gold;
     text-align: center;
-    }
+    font-size: 30px;
+}
+
+#titulo {
+    margin-top: 0;
+}
+
+#botoes {
+    font-size: 25px;
+    margin-bottom: 8px;
+    display: inline;
+    position: fixed;
+    text-align: center;
+    margin-top: 74px;
+    margin-left: 40%;
+
+
+}
 
 #minha_foto {
-    border-radius: 20px;
-    margin-top: 100px;
-    margin-left: 37%;
+    border-radius: 30px;
+    margin-top: 150px;
 }
 
 #licoes_aprendidas {
-    display: inline-block;
-        
+    display: inline-block;        
 }
 
 #licoes {
-    display: inline-block;
-    
+    display: inline-block;    
 }
 
 .aprender {
-    margin-left: 29%;
     font-style: normal;
     font-family: sans-serif;
 }
@@ -35,4 +49,10 @@ background-color:rgb(253, 251, 251);
 .text {
     font-style: normal;
     font-family: sans-serif;
+}
+
+#rodape {
+    margin-left: 39%;
+    font-size: 25px;
+    margin-top: 24px;
 }
