--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body {
   background-color: rgb(253, 251, 251);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+
+main {
+  font-size: 16px;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
-  margin: 1% 20% 1% 40%;
+  margin: 1% 20% 1% 38%;
+  font-size: 17px;
 }
 
 #minha_foto {
