Alteraçoes em STYLE 3

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ background-color: rgb(253, 251, 251);
     display: inline-block;        
 }
 
-#licoes {
+#licoes_a_aprender {
     display: inline-block;    
 }
 
