--- a/style.css
+++ b/style.css
@@ -41,13 +41,12 @@ body {
 .lado-esquerdo {
   margin-top: 60px;
   color: black;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
   line-height: 30px;
   margin-left: 20px;
   width: 50%;
   display: inline-block;
-  
 }
 
 .lado-direito {
@@ -68,5 +67,3 @@ body {
 #rodape {
   border: solid;
 }
-
-
