--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ h1 {
   border: aqua;
   color: chocolate;
   line-height: 0%;
-  font-size: large
+  font-size: large;
 }
 
 #cabecalho {
   display: inline-block;
   top: 0%;
-  position : fixed
+  position : fixed;
 
 }
 
@@ -32,5 +32,4 @@ h1 {
 #minha_foto {
   width: 100px;
   border-radius : 70%;
-  display: inline-block;
-}
+  display: inline-block;}
