--- a/style.css
+++ b/style.css
@@ -1,46 +1,73 @@
 body {
     background-color: rgb(253, 251, 251);
+    font-family: Helvetica, sans-serif;
     margin-right: 15%;
     margin-left: 15%;
-    font-family: Helvetica, sans-serif;
-    margin-top: 130px;
+    margin-top: 115px;
 }
 
 #cabecalho {    
-    background-color: #434343;
-    margin: 0px;
+    background-color: #03D3B4;
+    color: white;
+    padding-right: 50%;
     position: fixed;
     top: 0%;
-    padding-right: 50%; 
+}
+
+nav {
+    color: white;
 }
 
 #titulo {
-    
+
 }
 
 #minha_foto {
-    width: 175px;
-    float: left;
+    width: 175px;;
+}
+
+table, td, th, tfoot {
+    border:solid 1px #000;
+    display: inline-block;
+    padding:5px;
 }
 
 #licoes_aprendidas {
-    display: inline-block;
+    font-size: small;
 }
 
 #licoes_a_aprender {
-    display: inline-block;
+    font-size: small;
 }
 
 #rodape {
-    
+    float: left;
+    font-size: small;
 }
 
 #meu_aprendizado {
-    width: 200px;
-    display: inline-block;
-    margin-left: 75%;
+
+}
+
+#meu_aprendizado {
+    display: block;
+    float: right;
+    font-size: medium;
+    width: 450px;
 }
 
 .lista_de_licoes {
 
+}
+
+.lado-esquerdo {
+    display: block;
+    float: left;
+    font-size:medium;
+    line-height: 20px;
+    width: 450px;
+}
+
+.lado-direito {
+    line-height: 20px;
 }
