--- a/style.css
+++ b/style.css
@@ -4,25 +4,28 @@ body {background-color: rgb(253, 251, 251);
 
 #cabecalho {
   position: fixed;
-  top: 0px;
-  left: 0px;
-  right: 0px;
+  top: 0;
+  left: 0;
+  right: 0;
   background-color: rgb(83, 162, 127);
   height: 100px;
 }
 
 #titulo {
   color: whitesmoke;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, Times, serif;
   text-align: center;
-   
 }
 
 #minha_foto {
-  padding: 9px 10px 10px 0px;
+  padding: 9px 10px 10px 0;
   width: 300px;  
 }
 
 #licoes_aprendidas {
- line-height: 30px;
+  line-height: 30px;
+}
+
+#licoes_a_aprender {
+  line-height: 30px;
 }
