correcao barra fixa

--- a/style.css
+++ b/style.css
@@ -5,4 +5,8 @@ body {
 #cabecalho {
   position: fixed;
   top: 0;
+  background-color: black;
+  color: green;
+  width: 100%;
+  text-align: center;
 }
