--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ background-color: rgb(253, 251, 251);
     text-align: center;
     margin-top: 74px;
     margin-left: 40%;
-
-
+    letter-spacing:2px;
+    color: black;
 }
 
 #minha_foto {
