--- a/style.css
+++ b/style.css
@@ -163,3 +163,28 @@ main article aside p {
   text-align-last: center;
 }
 
+main section.calendar { padding: 20px; }
+main section.calendar table {
+  margin: 0 auto;
+
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+}
+
+main section.calendar table tr th { 
+  padding: 5px;
+
+  text-align: center;
+}
+
+main section.calendar table tr td {
+  padding: 5px;
+
+  text-align: center;
+}
+
+main section.calendar table tr td.day {
+  background-color: rgb(0, 155, 52);
+  color: rgb(235, 235, 235);
+  font-weight: 600;
+}
