--- a/style.css
+++ b/style.css
@@ -7,10 +7,6 @@
   #cabecalho {
     top: 0;
     position: fixed;
-    bottom: 0;
-    right: 0;
-    width: 300px;
-    border: 3px solid #73AD21;
 }
   #titulo {
       text-align: center;     
@@ -27,7 +23,7 @@
     border-radius: 200px;
   }
   #Meu_nome {
-      font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-family:Impact,'Arial Narrow Bold', sans-serif;
       font-size: 20px;
   }
   .lado_direito li {
