--- a/style.css
+++ b/style.css
@@ -112,8 +112,7 @@ body {
     border-radius: 0 25px 25px 0;
     border-top: none;
     font-size: 18px;
-    height: 40%;
-    padding: 15px 0 0 15px;
+    padding: 15px 0 25px 15px;
 }
 
 .my_infos ul {
@@ -156,14 +155,14 @@ body {
 .presentation h2 {
     border-right: transparent;
     border-radius: 25px 0 0 25px;
-    padding-top: 25px;
+    padding: 15px 10px;
 }
 
 .self_resume {
     border-right: none;
     border-top: none;
     border-radius: 25px 0 0 25px;
-    padding: 12px 5px 0;
+    padding: 15px 10px;
     text-align: justify;
 }
 
@@ -173,7 +172,7 @@ body {
                          'ab2 ab2 ab3';
     grid-template-columns: 35% 35% 30%;
     grid-template-rows: 200px
-                        100px;
+                        auto;
 }
 
 .sec_ab_1 {
