--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
-aside, nav {
-    border-top: 2px black solid;
-    margin-top: 30px;
-    margin: auto;
+aside , nav {
+  border-top: 2px black solid;
+  margin-top: 30px;
 }
+
+aside {
+  display: block;
+  padding: 10px;
+}
+
 body {
   background-color: rgb(253, 251, 251);
-  font-size: 15px ;
+  font-size: 15px;
   line-height: normal;
+  margin: auto;
+  width: auto;
 }
 
 #cabecalho {
@@ -14,20 +21,39 @@ body {
   top: 0;
   border: 3px solid black;
   width: 100%;
-  background-color: #8bcc8b;
+  background-color: rgb(139, 204, 139);
   text-align: center;
   font-family: monospace, sans-serif;
+  margin: auto;
+  display: block;
 }
 
 footer {
   margin-top: 30px;
-  font-family: monospace,sans-serif;
+  font-family: monospace, sans-serif;
   font-size: 10px;
-
 }
+
+h1 , h2 , h3 {
+  font-family: monospace , sans-serif;
+}
+
+.lado-esquerdo {
+  margin-top: 50px;
+  display: inline-block;
+}
+
+.lado-direito {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 75%;
+  display: inline-block;
+  margin-left: 10px;
+}
+
 #list {
   list-style: none;
-  color:black
+  color: black;
 }
 
 #licoes_a_aprender {
@@ -39,8 +65,9 @@ footer {
   border-radius: 25%;
   margin-top: 185px;
 }
+
 table {
   padding: 10px;
-  border: 1px green solid
+  border: 1px green solid;
 }
 
