--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+body h2{
+    text-align: center;
+    padding: 30px;
+}
+
 header{
     background-image: url("imagem/capa.jpg");
     text-align: center;
@@ -23,4 +28,21 @@ header{
     margin-left: auto;
     margin-right: auto;
     border-radius: 50%;
+}
+
+.lista{
+    display: inline-block; 
+    margin: auto;
+    padding-right: 100px;
+}
+
+.listas #licoes_a_aprender{
+    list-style: square;
+}
+
+.listas{
+    display: inline-block; 
+    padding-top: 50px;
+    width: 100%;
+    padding-left: 500px;
 }
