finish of finish

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ utilizado o codigo do léo machado
   width: 300px;
   margin-left: 2px;
   float: right;
+  margin-right: 40px;
 }
 
 .lado-esquerdo {
