--- a/style.css
+++ b/style.css
@@ -1,3 +1,76 @@
 body {
     background-color: rgb(253, 251, 251);
 }
+
+main {
+    background-color: #f8f1cf;
+    border: 1px solid;
+    width: 900px;
+    text-align: justify;
+    margin: auto;
+}
+
+a {
+    padding: 10px;
+}
+
+#cabecalho { 
+    border: 1px solid;
+    background-color: #dac144;
+    border-radius: 5px;
+    color: #3f3b23;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100px;
+;
+}
+
+#titulo {
+    text-align: center;
+    font-size: 34px;
+}
+
+#minha_foto {
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.556);
+    border-radius: 10px;
+    width: 200px;
+    margin-top: 110px;
+    margin-left: 20px;
+}
+
+.ao_lado {
+    display: inline-block;
+    padding-right: 150px;
+    
+}
+
+.licoes{
+    display: inline-block;
+    padding-right: 150px;
+    padding-left: 129px;
+}
+
+.licoes h3 {
+    color: #7A6B1C;
+}
+
+#licoes_aprendidas {
+    font-family: sans-serif;
+}
+
+#licoes_a_aprender {
+    font-family: sans-serif;
+}
+
+.lado-direito {
+    line-height: 25px;
+}
+
+.lado-esquerdo {
+    line-height: 25px;
+}
+
+#rodape {
+    text-align: center;
+}
