--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
   padding: 0;
   border: 0;
   /* Meus ajustes */
-  text-align: justify;
+  text-align: center;
+  font-family: monospace;
 }
 
 /* 2. Adicione uma barra superior com um título*/
@@ -17,7 +18,8 @@ body {
 
 /*14. Altere atributos relacionados como fontes*/
 header h1 {
-  font-size: 50px;
+  font-size: 30px;
+  font-weight: bold;
   color: rgba(61, 73, 92);
   font-family: monospace;
 }
@@ -28,14 +30,68 @@ li {
 }
 
 /*15. Posicione o seu artigo e a seção sobre aprendizados um ao lado do outro*/
-.lado-esquerdo {
+
+.caixa {
   display: inline-block;
-  float: left;
-  width: 45%;
+  vertical-align: top;
+  width: 30%;
+  margin: 10px;
+  padding: 5px 5px;
+  text-align: justify;
+  font-size: 15px;
+  line-height: 36px;
 }
 
-.lado-direito {
+.listas {
   display: inline-block;
-  float: right;
-  width: 45%;
+  vertical-align: top;
+  width: 30%;
+  margin: 10px;
+  padding: 5px 5px;
+  text-align: justify;
+  font-size: 15px;
+  line-height: 36px;
+}
+
+img {
+  width: 300px;
+  margin-left: 100px;
+}
+
+#rodape {
+  position: relative;
+  padding: 0px;
+  bottom: 0px;
+  width: 100%;
+  top: 67px;
+  border-top: 1px black solid;
+  background-color: rgb(129, 124, 124);
+  color: #fff;
+}
+
+main {
+  padding: 150px 0 0 0;
+}
+
+header {
+  background-color: rgb(129, 124, 124);
+  width: 100%;
+  text-align: left;
+  color: #fff;
+}
+
+table {
+  border: 1px solid;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+th,
+td {
+  border: 1px solid;
+}
+
+legend {
+  text-align: center;
 }
