--- a/style.css
+++ b/style.css
@@ -18,9 +18,8 @@ body {
 	background-color: rgb(162, 216, 185);
 }
 
-
 #titulo {
-	font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: -apple-system, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 	margin: 0 auto;
 	color: rgba(255, 255, 255, .8);
 }
@@ -35,7 +34,7 @@ body {
 #navegacao {
 	position: fixed;
 	top: 84px;
-	background-color: #171515;
+	background-color: rgb(23, 21, 21);
 	width: 100%;
 	padding: 10px;
 }
@@ -47,12 +46,9 @@ body {
 	color: rgba(255, 255, 255, .8);
 }
 
-
 #licoes_aprendidas, #licoes_a_aprender {
 	list-style: decimal;
 }
-
-
 
 .lado-esquerdo {
 	margin-top: 10px;
