--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h3{
     font-family: Arial, Helvetica, sans-serif;
     line-height:3px;
     letter-spacing:2px;
+    word-spacing:1px;
 }
 
 .nome{
@@ -55,11 +56,10 @@ h3{
 }
 
 .lado-direito{
-    float: left;
+    float: right;
 }
 footer{
-    float: left;
-    
+    clear:both    
 }
 
 .licoes h3{
