--- a/style.css
+++ b/style.css
@@ -1,26 +1,28 @@
 /* 1. Adicione uma cor de fundo específica para a página */
 body {
   background-color: rgb(253, 251, 251);
-  /*13. Utilizar o modelo o Box*/
+
+  /* 13. Utilizar o modelo o Box */
   margin: 0;
   padding: 0;
   border: 0;
+
   /* Meus ajustes */
   text-align: center;
   font-family: monospace;
 }
 
-/* 2. Adicione uma barra superior com um título*/
+/* 2. Adicione uma barra superior com um título */
 #cabecalho {
   position: fixed;
   top: 0 fixed;
 }
 
-/*14. Altere atributos relacionados como fontes*/
+/* 14. Altere atributos relacionados como fontes */
 header h1 {
   font-size: 30px;
-  font-weight: bold;
-  color: rgba(61, 73, 92);
+  font-weight: 600;
+  color: rgba(61,73,92);
   font-family: monospace;
 }
 
@@ -29,14 +31,13 @@ li {
   line-height: 25px;
 }
 
-/*15. Posicione o seu artigo e a seção sobre aprendizados um ao lado do outro*/
-
+/* 15. Posicione o seu artigo e a seção sobre aprendizados um ao lado do outro */
 .caixa {
   display: inline-block;
   vertical-align: top;
   width: 30%;
   margin: 10px;
-  padding: 5px 5px;
+  padding: 5px;
   text-align: justify;
   font-size: 15px;
   line-height: 36px;
@@ -47,7 +48,7 @@ li {
   vertical-align: top;
   width: 30%;
   margin: 10px;
-  padding: 5px 5px;
+  padding: 5px;
   text-align: justify;
   font-size: 15px;
   line-height: 36px;
@@ -60,24 +61,24 @@ img {
 
 #rodape {
   position: relative;
-  padding: 0px;
-  bottom: 0px;
+  padding: 0;
+  bottom: 0;
   width: 100%;
   top: 67px;
   border-top: 1px black solid;
   background-color: rgb(129, 124, 124);
-  color: #fff;
+  color: white;
 }
 
 main {
-  padding: 150px 0 0 0;
+  padding: 150px 0 0;
 }
 
 header {
-  background-color: rgb(129, 124, 124);
+  background-color: rgb(129,124,124);
   width: 100%;
   text-align: left;
-  color: #fff;
+  color: white;
 }
 
 table {
