--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 }
 
 .container_licoes_aprendidas {
-	margin: 130px 20px 10px 20px;
+	margin: 130px 20px 10px;
 	padding: 10px 35px;
 	width: 25%;
 }
